# graph_mapper

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  PLOT.py  README.md  cmake-format.yaml  column_first.csv  res.csv  res2.csv  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
data/: maximum_clique_of_undirected_connected_graphs_size_1.csv  maximum_clique_of_undirected_connected_graphs_size_2.csv  maximum_clique_of_undirected_connected_graphs_size_3.csv  maximum_clique_of_undirected_connected_graphs_size_4.csv  maximum_clique_of_undirected_connected_graphs_size_5.csv  maximum_clique_of_undirected_connected_graphs_size_6.csv  maximum_clique_of_undirected_connected_graphs_size_7.csv  maximum_clique_of_undirected_connected_graphs_size_8.csv  maximum_independent_set_of_undirected_connected_graphs_size_2.csv  maximum_independent_set_of_undirected_connected_graphs_size_3.csv  maximum_independent_set_of_undirected_connected_graphs_size_4.csv  maximum_independent_set_of_undirected_connected_graphs_size_5.csv  maximum_independent_set_of_undirected_connected_graphs_size_6.csv  maximum_independent_set_of_undirected_connected_graphs_size_7.csv  maximum_independent_set_of_undirected_connected_graphs_size_8.csv  minimum_vertex_cover_of_undirected_connected_graphs_size_1.csv  minimum_vertex_cover_of_undirected_connected_graphs_size_2.csv  minimum_vertex_cover_of_undirected_connected_graphs_size_3.csv  minimum_vertex_cover_of_undirected_connected_graphs_size_4.csv  minimum_vertex_cover_of_undirected_connected_graphs_size_5.csv  minimum_vertex_cover_of_undirected_connected_graphs_size_6.csv  minimum_vertex_cover_of_undirected_connected_graphs_size_7.csv  minimum_vertex_cover_of_undirected_connected_graphs_size_8.csv  none_isomorphic_connected_undirected_graphs_of_up_to_size_1.csv  none_isomorphic_connected_undirected_graphs_of_up_to_size_2.csv  none_isomorphic_connected_undirected_graphs_of_up_to_size_3.csv  none_isomorphic_connected_undirected_graphs_of_up_to_size_4.csv  none_isomorphic_connected_undirected_graphs_of_up_to_size_5.csv  none_isomorphic_connected_undirected_graphs_of_up_to_size_6.csv  none_isomorphic_connected_undirected_graphs_of_up_to_size_7.csv  none_isomorphic_connected_undirected_graphs_of_up_to_size_8.csv  none_isomorphic_undirected_graphs_of_up_to_size_2.csv  none_isomorphic_undirected_graphs_of_up_to_size_3.csv  none_isomorphic_undirected_graphs_of_up_to_size_4.csv  none_isomorphic_undirected_graphs_of_up_to_size_5.csv  none_isomorphic_undirected_graphs_of_up_to_size_6.csv  (+2 more)
source/: graph_mapper.cpp
test/: CMakeLists.txt  bench.cpp
test/source/: graph_mapper_test.cpp  test_helpers.h
test/source/graphs/: graph_base_tests.cpp  undirected_graph_tests.cpp
test/source/solvers/: isomorphism_runner.cpp  isomorphism_tests.cpp  maximum_clique_runner.cpp  maximum_clique_tests.cpp  maximum_independent_set_runner.cpp  maximum_independent_set_tests.cpp  minimum_vertex_cover_runner.cpp  minimum_vertex_cover_tests.cpp
(+15 files in other folders)
